initialization of db added

--- a/config/local.yaml
+++ b/config/local.yaml
@@ -2,6 +2,8 @@
 # которые хранят конфигурацию (как я понял, yaml используеться
 # для конфигурации на докере)
 
+# ОБНОВЛЕНИЕ. Я решил использовать json потому что yaml не парситься
+
 
 # 3) приложению нужно знать в каком окружении его запускают, 
 # оно должно понимать, что это локальная машина или это удаленный сервер,
