--- a/config/local.yaml
+++ b/config/local.yaml
@@ -24,3 +24,5 @@ http_server:
   # то мы используем одно соиденение. Нет смысла каждый раз открывать закрывать соиденение на каждый 
   # запрос от одного клиента и мы будем переиспользовать одно и тоже соиденение, но если клиент нам 
   # долго не запрашивает, то такое соиденение нужно обрывать.    
+  user: "123"
+  password: "123"
